# CluStRE

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Stream_CPI_Info.fbs  Stream_CPI_Info_generated.h  compile.sh
StreamCPIInfo/: ClusteringMetrics.py  GraphMetadata.py  MemoryConsumption.py  Partition.py  PartitionConfiguration.py  PartitionMetrics.py  RunTime.py
app/: clustering.cpp  configuration.h  parse_parameters.h  parse_spac_parameters.h
eval_scripts/: create_csv_files.py  evaluate_fb_files.py  test_flatbuffer_log.py  vieclus_csv.py
experiments/: generate_commands.sh
lib/: FlatBufferWriter.h  definitions.h
lib/data_structure/: graph_access.h  graph_hierarchy.cpp  graph_hierarchy.h  hashmap.h
lib/extclustering/: extclustering.cpp  extclustering.h  extclustering_vieclus.cpp  extclustering_vieclus.h
lib/io/: graph_io_stream.cpp  graph_io_stream.h
lib/partition/: partition_config.h
lib/partition/onepass_partitioning/: floating_block.cpp  floating_block.h  leiden.cpp  leiden.h  modularity.cpp  modularity.h  vertex_partitioning.cpp  vertex_partitioning.h
lib/tools/: graph_communication.cpp  graph_communication.h  graph_extractor.cpp  graph_extractor.h  graph_partition_assertions.h  misc.cpp  misc.h  partition_snapshooter.cpp  partition_snapshooter.h  quality_metrics.cpp  quality_metrics.h  random_functions.cpp  random_functions.h
